# cluttool

./: .gitignore  README.rst  pyproject.toml
cluttool/: __main__.py  cluttool.py
tests/: test_cluttool.py
