[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cluttool"
dynamic = ["version"]
description = "create and convert 3D/color LUTs"
readme = "README.rst"
license = "GPL-3.0"
authors = [
    { name = "Troy Sankey", email = "sankeytms@gmail.com" },
]
keywords = [
    "3d",
    "3dl",
    "clut",
    "color",
    "hald",
    "lut",
]
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "click>=6.7,<8.0",
]

[project.scripts]
cluttool = "cluttool.cluttool:cli"

[tool.hatch.version]
path = "cluttool/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/cluttool",
]
