[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cluttool"
dynamic = ["version"]
description = "create and convert 3D/color LUTs"
readme = "README.rst"
license = "GPL-3.0"
requires-python = ">=3.9"
authors = [
    { name = "Troy Sankey", email = "sankeytms@gmail.com" },
    { name = "Aarni Koskela", email = "akx@iki.fi" },
]
keywords = [
    "3d",
    "3dl",
    "clut",
    "color",
    "hald",
    "lut",
]
classifiers = []
dependencies = [
    "click>=6.7,<8.0",
    "pypng>=0.20220715.0",
]

[project.optional-dependencies]
fast = [
    "numpy>=1.21",
]

[project.scripts]
cluttool = "cluttool.__main__:cli"

[tool.hatch.version]
path = "cluttool/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/cluttool",
    "/tests",
    "/README.rst",
    "/COPYING",
]
artifacts = [
    "tests/goldengate.png",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
extend-select = ["I", "UP"]


[tool.coverage.report]
exclude_also = [
    'raise ValidationError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
]
